--- a/Aula02/aula02/app/globals.css
+++ b/Aula02/aula02/app/globals.css
@@ -23,4 +23,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 90%;
+  margin: auto;
 }
+
+/* .container {
+  max-width: 90%;
+  margin: auto;
+} */
